test: Tricking the svelte compiler
