# data-mind-web.openapi.json
@@ -916,7 +916,7 @@
             "content": {
               "application/json": {
                 "schema": {
-                  "$ref": "#/components/schemas/AkStockIndividualInfoEm"
+                  "$ref": "#/components/schemas/OkRes_AkStockIndividualInfoEm"
                 }
               }
             },
@@ -4375,6 +4375,92 @@
             "type": "number",
             "format": "double",
             "description": "交易量"
+          }
+        }
+      },
+      "OkRes_AkStockIndividualInfoEm": {
+        "type": "object",
+        "description": "用于响应正确响应的通用响应体",
+        "required": [
+          "code",
+          "message",
+          "data"
+        ],
+        "properties": {
+          "code": {
+            "type": "integer",
+            "format": "int32",
+            "description": "✅ 正确响应 http 状态码",
+            "minimum": 0,
+            "examples": [
+              200
+            ]
+          },
+          "data": {
+            "type": "object",
+            "description": "stock_individual_info_em\n目标地址: http://quote.eastmoney.com/concept/sh603777.html?from=classic\n描述: 东方财富-个股-股票信息\n限量: 单次返回指定 symbol 的个股信息",
+            "required": [
+              "latest_price",
+              "stock_code",
+              "stock_name",
+              "total_shares",
+              "circulating_shares",
+              "total_market_cap",
+              "circulating_market_cap",
+              "industry",
+              "listing_date"
+            ],
+            "properties": {
+              "circulating_market_cap": {
+                "type": "number",
+                "format": "double",
+                "description": "流通市值(元)"
+              },
+              "circulating_shares": {
+                "type": "number",
+                "format": "double",
+                "description": "流通股"
+              },
+              "industry": {
+                "type": "string",
+                "description": "行业"
+              },
+              "latest_price": {
+                "type": "number",
+                "format": "double",
+                "description": "最新价(元)"
+              },
+              "listing_date": {
+                "type": "integer",
+                "format": "int64",
+                "description": "上市时间"
+              },
+              "stock_code": {
+                "type": "string",
+                "description": "股票代码"
+              },
+              "stock_name": {
+                "type": "string",
+                "description": "股票简称"
+              },
+              "total_market_cap": {
+                "type": "number",
+                "format": "double",
+                "description": "总市值(元)"
+              },
+              "total_shares": {
+                "type": "number",
+                "format": "double",
+                "description": "总股本(元)"
+              }
+            }
+          },
+          "message": {
+            "type": "string",
+            "description": "💬 正确响应描述性文本",
+            "examples": [
+              "登陆成功，欢迎来到data-mind!👏"
+            ]
           }
         }
       }
