# src/routes/astock/[stock_code]/+page.ts
@@ -1,0 +1,17 @@
+import type { PageLoad } from './$types.js';
+
+export const entries = () => {
+	return [
+		{
+			stock_code: '0'
+		}
+	];
+};
+
+export const load: PageLoad = ({ params }) => {
+	const { stock_code } = params;
+
+	return {
+		stockCode: stock_code
+	};
+};
